  (Vincent Laviron, on a suggestion by Mark Shinwell,
  reviews by Pierre Chambart and Xavier Leroy)

- GPR#1606: Simplify the semantics of Lambda.free_variables and Lambda.subst,
  including some API changes in bytecomp/lambda.mli
  (Pierre Chambart, review by Gabriel Scherer)

* GPR#1617: Make string/bytes distinguishable in the bytecode.
  (Hugo Heuzard, reviewed by Nicolás Ojeda Bär)

### Runtime system:

- MPR#6411, GPR#1535: don't compile everything with -static-libgcc on mingw32,
  only dllbigarray.dll and libbigarray.a. Allows the use of C++ libraries which
  raise exceptions.
  (David Allsopp)

- MPR#7100, GPR#1476: trigger a minor GC when custom blocks accumulate
  in minor heap
  (Alain Frisch, report by talex, review by Damien Doligez, Leo White,
  Gabriel Scherer)

- GPR#1431: remove ocamlrun dependencies on curses/terminfo/termcap C library
  (Xavier Leroy, review by Daniel Bünzli)

- GPR#1478: The Spacetime profiler now works under Windows (but it is not yet
  able to collect profiling information from C stubs).
  (Nicolás Ojeda Bär, review by Xavier Leroy, Mark Shinwell)

- GPR#1483: fix GC freelist accounting for chunks larger than the maximum block
  size.
  (David Allsopp and Damien Doligez)

- GPR#1526: install the debug and instrumented runtimes
  (lib{caml,asm}run{d,i}.a)
  (Gabriel Scherer, reminded by Julia Lawall)

- GPR#1563: simplify implementation of LSRINT and ASRINT
  (Max Mouratov, review by Frédéric Bour)

- GPR#1644: remove caml_alloc_float_array from the bytecode primitives list
  (it's a native code primitive)
  (David Allsopp)

### Tools:

- MPR#7643, GPR#1377: ocamldep, fix an exponential blowup in presence of nested
  structures and signatures (e.g. "include struct … include(struct … end) … end")
  (Florian Angeletti, review by Gabriel Scherer, report by Christophe Raffalli)

- MPR#7687, GPR#1653: deprecate -thread option,
  which is equivalent to -I +threads.
  (Nicolás Ojeda Bär, report by Daniel Bünzli)
