@@ -89,6 +89,7 @@ UNIX_OR_WIN32=win32
 UNIXLIB=win32unix
 GRAPHLIB=win32graph
 FLAMBDA=false
+WITH_FLAMBDA_INVARIANTS=false
 WITH_PROFINFO=false
 WITH_SPACETIME=false
 ENABLE_CALL_COUNTS=false
