@@ -210,6 +210,7 @@ module Options = Main_args.Make_optcomp_options (struct
   let _dflambda_verbose () =
     set dump_flambda ();
     set dump_flambda_verbose ()
+  let _dflambda_invariants = set flambda_invariant_checks
   let _dflambda_no_invariants = clear flambda_invariant_checks
   let _dcmm = set dump_cmm
   let _dsel = set dump_selection
