@@ -157,6 +157,7 @@ module Options = Main_args.Make_optcomp_options (struct
   let _dclambda = option "-dclambda"
   let _drawflambda = option "-drawflambda"
   let _dflambda = option "-dflambda"
+  let _dflambda_invariants = option "-dflambda-invariants"
   let _dflambda_no_invariants = option "-dflambda-no-invariants"
   let _dflambda_let stamp = option_with_int "-dflambda-let" stamp
   let _dflambda_verbose = option "-dflambda-verbose"
