@@ -135,7 +135,8 @@ let native_code = ref false             (* set to true under ocamlopt *)
 let force_slash = ref false             (* for ocamldep *)
 let clambda_checks = ref false          (* -clambda-checks *)
 
-let flambda_invariant_checks = ref true (* -flambda-invariants *)
+let flambda_invariant_checks =
+  ref Config.with_flambda_invariants    (* -flambda-(no-)invariants *)
 
 let dont_write_files = ref false        (* set to true under ocamldoc *)
 
